# random-shell-scripts

./: .gitignore  ar.sh  arch.sh  vc.sh
gcloud/: compare.sh
legendary-cli/: README.md  config.ini  pw.sh
minecraft-related/: diag.sh  replace.sh
spec-payload/: .env.local  README.md  main.py  pyproject.toml  report.service
