[project]
name = "spec-payload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "distro>=1.9.0",
    "dotenv>=0.9.9",
    "gputil>=1.4.0",
    "psutil>=7.1.0",
    "py-cpuinfo>=9.0.0",
    "pydantic>=2.11.9",
    "setuptools>=80.9.0",
]
